manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  labels:
    app: flaskapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: devopshint
          image: hinaar/flaskapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
