ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - <example.com>
    secretName: tls-secret
  rules:
  - host: "<example.com>"
    http:
      paths:
      - pathType: Prefix
        path: /flaskapp
        backend:
          service:
            name: flaskapp
            port:
              number: 80
